<resources>
    <string name="app_name">Cake Corner</string>
    <string name="welcome_note">Welcome to Cake Corner your one stop destination for delicious cakes</string>
    <string name="tab_name">Get Started</string>
    <string name="Cake_Corner">Cake Corner</string>
    <string name="Welcome">Welcome</string>
    <string name="login_info">Please login with your information</string>
    <string name="name">User Name</string>
    <string name="pwd">Password</string>
    <string name="Remember_me">Remember me</string>
    <string name="fog_pwd">I forgot my password</string>
    <string name="login">LOGIN</string>
    <string name="alternatives">or Login with</string>
    <string name="password_subject_hint">or Password Subject hint</string>
    <string name="name_subject_hint">or Name Subject hint</string>
    <string name="fruit">Fruit Cake </string>
    <string name="rainbow">Rainbow Cake </string>
    <string name="cheese">Cheese Cake </string>
    <string name="raspberry">Raspberry coffee Cake </string>
    <string name="choco">Chocolate Truffle Cake </string>
    <string name="mousse">Chocolate Mousse Cake </string>
    <string name="upload">Upload a Photo </string>
    <string name="submit"> Submit </string>
    <string name="custSubject"> Customized </string>
    <string name="size"> Size: </string>
    <string name="flavours">Flavours:</string>
    <string name="message"> Message: </string>
    <string name="cake"> Cake: </string>
    <string name="qty"> Quantity: </string>
    <string name="price"> Price: </string>
    <string name="pmethods"> Payment Methods: </string>
    <string name="cash"> Cash: </string>
    <string name="card"> Card: </string>
</resources>